# fiesc-study-case

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: feature_configs.py  train.yaml
configs/experiment/baseline/: exp1_1_time_domain.yaml  exp1_2_freq_domain.yaml  exp1_3_statistical_feats.yaml  exp1_4_impulsive_feats.yaml  exp1_5_all_features.yaml
configs/experiment/xgboost/: exp2_1_freq_domain.yaml  exp2_2_all_features.yaml
configs/feature_engineering/: feature_configs.yaml
configs/feature_engineering/features/: default.yaml
configs/feature_engineering/filters/: default.yaml
configs/feature_engineering/hydra/: default.yaml
configs/hydra/: default.yaml
configs/param_distributions/: logistic_regression.yaml  xgboost.yaml
configs/paths/: default.yaml
configs/search_strategy/: random_search_cv.yaml
configs/trainer/: default.yaml
configs/trainer/datamodule/: default.yaml
configs/training/: train.yaml
configs/wandb/: default.yaml
docs/: experiments.md  task_definition.md  todo.md
notebooks/eda/: checking_nans.ipynb  data_visualization.ipynb  exploring_classes.ipynb  feature_engineering.ipynb  feature_visualization.ipynb
notebooks/experiments/: baseline.ipynb
scripts/: run_experiments.sh
src/: feature_engineering.py  train.py
src/data/: datamodule.py  load_data.py
src/features/: signal_representations.py  specialized_features.py
src/model/: trainer.py
utils/: utils.py
utils/features/: frequency_domain.py  impulsive.py  statistical.py
utils/filters/: __init__.py  bandpass.py  kurtogram.py
utils/signal_representations/: __init__.py  displacement.py  envelope.py  fft.py  power_cepstrum.py  velocity.py
utils/transforms/: fft.py
(+12 files in other folders)
