[tool.poetry]
name = "fiesc-study-case"
version = "0.1.0"
description = ""
authors = ["Rodrigo <rodrigokrosa@gmail.com>"]
readme = "README.md"
packages = [{include = "fiesc_study_case"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
autorootcwd = "^1.0.0"
pyarrow = "^15.0.0"
hydra-core = "^1.3.2"
wandb = "^0.16.3"
hydra-colorlog = "^1.2.0"
xgboost = "^2.0.3"
catboost = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
poethepoet = "^0.24.4"
pre-commit = "^3.6.0"
ipykernel = "^6.29.2"
black = "^24.1.1"

[tool.poetry.group.eda.dependencies]
ipywidgets = "^8.1.2"
seaborn = "^0.13.2"

[tool.poe.tasks]
black-format = "black . --line-length 99"
black-check = "black . --check --diff -v --line-length 99"
test-unit = ["_test_unit", "_coverage_html"]
_test_unit = "coverage run -m pytest tests/"
_coverage_html = "coverage html"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["**/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
